--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p> Marlon nació para cambiar el mundo y para ser la persona que va a cambiar el mundo <br>
     así a muchas personas no les importe y sean tan irredentoras y no comprendan que se debe realizar <br>
     cambios importantes en el mundo para ser mejores. </p>
+    <p> Marlon tiene cosas importantes por hacer. Tiene todas las cosas importantes que se deben <br>
+    trabajar para un mejor futuro.</p>
 </body>
 </html>
