--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 </head>
 <body>
     <h1> Marlon es el mejor de todo el mundo </h1>
-    <p> Marlon nació para cambiar el mundo y para ser la persona que va a cambiar el mundo <br>
-    así a muchas personas no les importe y sean tan irredentoras y no comprendan que se debe realizar <br>
-    cambios importantes en el mundo para ser mejores. </p>
-    <p> Marlon tiene cosas importantes por hacer. Tiene todas las cosas importantes que se deben <br>
-    trabajar para un mejor futuro.</p>
+    <p> Marlon es el mejor de todos los tiempos. </p>
 </body>
 </html>
