agregado segundo párrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 <body>
     <h1> Marlon es el mejor de todo el mundo </h1>
     <p> Marlon es el mejor de todos los tiempos. </p>
+    <p> Nosotros tenemos todas las herramientas necesarias para llevar a cabo <br>
+    todo el proyecto que necesita todo el esfuerzo de los que tenemos en la <br>
+    reserva general y en la reserva final del proyecto. Por eso merecemos que <br>
+    las principales escuchas del pueblo podemos hacer todo lo que tenemos para <br>
+    hacer. </p>
 </body>
 </html>
