--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     reserva general y en la reserva final del proyecto. Por eso merecemos que <br>
     las principales escuchas del pueblo podemos hacer todo lo que tenemos para <br>
     hacer. </p>
+    <p> Nunca debimos de habernos rendido por haber hecho tal cosa.</p>
+    <p> Marlon es uno de las mejores personas que han existido en todo el planeta tierra.</p>
+    <p> Marlon es un tipo muy genial que siempre hace lo que se le da la gana. </p>
 </body>
 </html>
