--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p> Nunca debimos de habernos rendido por haber hecho tal cosa.</p>
     <p> Marlon es uno de las mejores personas que han existido en todo el planeta tierra.</p>
     <p> Marlon es un tipo muy genial que siempre hace lo que se le da la gana. </p>
+    <p> Juan es el tipo más cabrón de todo el mundo por puto y gonorrea. </p>
 </body>
 </html>
