--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <p> Marlon es un tipo muy genial que siempre hace lo que se le da la gana. </p>
     <p> Juan es el tipo más cabrón de todo el mundo por puto y gonorrea. </p>
     <p> Juan es el más hijo de puta de todo el mundo</p>
+    <p> PERRO MALDITO HIJUEPUTA</p>
+    <p> VOS MERECES LA MUERTEEEE</p>
 </body>
 </html>
